<resources>
    <string name="app_name">Tummy Fillers</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="show">SHOW</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="alreadyHave">Already have an account?</string>
    <string name="loogin">  Login</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="connect">Connect with Google</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
