<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.darkfellow.tummyfillers.SignUp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:contentDescription="@string/todo"
            android:paddingTop="10dp"
            android:src="@drawable/logo_tanpa_piring" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/toggleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerBtn"
        android:layout_centerInParent="false"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@+id/linearLayout2"
        android:text="@string/show"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@color/colorPrimary"
        android:text="@string/signUp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/registerBtn"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_marginBottom="6dp"
        android:text="   Already have an account?"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/doLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:text="  Login"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_marginTop="7dp"
        android:layout_toStartOf="@+id/linearLayout2"
        android:src="@drawable/email"
        android:tint="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailIcon"
        android:layout_marginTop="18dp"
        android:layout_toStartOf="@+id/linearLayout2"
        android:src="@drawable/person"
        android:tint="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleTextView"
        android:layout_below="@id/imageView2"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@+id/linearLayout2"
        android:src="@drawable/ic_action_name"
        android:tint="@android:color/darker_gray"/>


</RelativeLayout>
